Updated to use SQLite and added migration files

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,27 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//    "ConnectionStrings": {
+//        "Coffee_Shop2ContextConnection": "Server=DESKTOP-IVHRL9V\\SQLEXPRESS;Database=Coffee-Shop2;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false",
+//        "MyConn": "server=DESKTOP-IVHRL9V\\SQLEXPRESS;Trusted_Connection=true;database=Coffee-Shop2;Encrypt=false"
+//    }
+//}
+
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Coffee_Shop2ContextConnection": "Server=DESKTOP-IVHRL9V\\SQLEXPRESS;Database=Coffee-Shop2;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false",
-        "MyConn": "server=DESKTOP-IVHRL9V\\SQLEXPRESS;Trusted_Connection=true;database=Coffee-Shop2;Encrypt=false"
+        "Coffee_Shop2ContextConnection": "Data Source=coffee_identity.db",
+        "MyConn": "Data Source=coffee_app.db"
     }
 }
